--- a/CheckMyModel/ru.lproj/Localizable.strings
+++ b/CheckMyModel/ru.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2014 Anton Averkiev. All rights reserved.
 */
 
+"NOTIF" = "7 июля это приложение исчезнет из App Store. Исходники можно скачать с Bitbucket. Спасибо, что были с нами :3";
 
 // Первый запуск
 "HELLO_1" = "Привет!\nДавай покажу, как это работает\nЛистай на следующую страницу";
