--- a/CheckMyModel/en.lproj/Localizable.strings
+++ b/CheckMyModel/en.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2014 Anton Averkiev. All rights reserved.
 */
 
+"NOTIF" = "7th of july this application disappears from App Store. Source code can be loaded from Bitbucket. Thank you for support :3";
 
 // Первый запуск
 "HELLO_1" = "Hello!\nLet me show you how it works.\nSwipe to the next page";
